--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Site Metas -->
-    <link rel="icon" href="images/IDC_logo.jpeg" type="image/gif" />
+    <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -43,7 +43,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container">
             <a class="navbar-brand" href="/">
               <!-- <span>IDC</span> -->
-              <img src="images/IDC_logo.jpeg" alt="IDC logo" height="60" />
+              <img src="images/logo_square.png" alt="IDC logo" height="60" />
             </a>
 
             <button
@@ -385,7 +385,7 @@
           </div>
           <div class="col-md-6">
             <div class="img-box">
-              <img src="images/IDC_logo.jpeg" alt="" height="300" />
+              <img src="images/logo_square.png" alt="" height="300" />
             </div>
           </div>
         </div>
