--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                 style="font-size: xx-large; padding-bottom: 20px"
               ></i>
               <h4>Email</h4>
-              <p>demo@gmail.com</p>
+              <p>idctyping@gmail.com</p>
             </div>
           </div>
           <div class="col-md-4">
@@ -182,9 +182,9 @@
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span> Call 042555355 </span>
                 </a>
-                <a href="#">
+                <a href="mailto:idctyping@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
-                  <span> demo@gmail.com </span>
+                  <span> idctyping@gmail.com </span>
                 </a>
               </div>
             </div>
