--- a/service.html
+++ b/service.html
@@ -270,9 +270,9 @@
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span> Call 042555355 </span>
                 </a>
-                <a href="#">
+                <a href="mailto:idctyping@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
-                  <span> demo@gmail.com </span>
+                  <span> idctyping@gmail.com </span>
                 </a>
               </div>
             </div>
