--- a/service.html
+++ b/service.html
@@ -120,20 +120,27 @@
                   registration with the Department of Economic Development
                   (DED), and obtaining trade licenses.
                 </p>
-                <a
-                  href="business_setup.html"
-                  style="display: block; margin-bottom: 5px"
-                >
-                  New Business Setup
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-                <a
-                  href="license_renewal.html"
-                  style="display: block; margin-bottom: 5px"
-                >
-                  License Renewal
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
+                <div class="dropdown">
+                  <a
+                    class="btn btn-sm btn-1 dropdown-toggle"
+                    href="#"
+                    role="button"
+                    id="dropdownBusiness"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    More Options
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="dropdownBusiness">
+                    <a class="dropdown-item" href="business_setup.html"
+                      >New Business Setup</a
+                    >
+                    <a class="dropdown-item" href="license_renewal.html"
+                      >License Renewal</a
+                    >
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -150,20 +157,27 @@
                   and maid visas. This also includes visa renewal and
                   cancellation services.
                 </p>
-                <a
-                  href="employment_visa.html"
-                  style="display: block; margin-bottom: 5px"
-                >
-                  Employment Visa
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
-                <a
-                  href="family_visa.html"
-                  style="display: block; margin-bottom: 5px"
-                >
-                  Family Visa
-                  <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
+                <div class="dropdown">
+                  <a
+                    class="btn btn-sm btn-1 dropdown-toggle"
+                    href="#"
+                    role="button"
+                    id="dropdownVisa"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    More Options
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="dropdownVisa">
+                    <a class="dropdown-item" href="employment_visa.html"
+                      >Employment Visa</a
+                    >
+                    <a class="dropdown-item" href="family_visa.html"
+                      >Family Visa</a
+                    >
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -339,6 +353,8 @@
 
     <!-- jQery -->
     <script src="js/jquery-3.4.1.min.js"></script>
+    <!-- popper js -->
+    <script src="js/popper.min.js"></script>
     <!-- bootstrap js -->
     <script src="js/bootstrap.js"></script>
     <!-- custom js -->
