updated meta tags and added files for seo

--- a/license_renewal.html
+++ b/license_renewal.html
@@ -15,7 +15,20 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>IDC | License Renewal</title>
+    <!-- SEO Tags -->
+    <title>
+      IDC | License Renewal | Legal Document Clearing Services in Dubai
+    </title>
+    <meta
+      name="description"
+      content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
+    />
+    <meta
+      name="keywords"
+      content="document clearing Dubai, attestation services UAE, PRO services Dubai, visa processing Dubai, legal translation UAE, business licensing UAE"
+    />
+    <meta name="author" content="IDC Document Clearing Services" />
+    <link rel="canonical" href="https://idctyping.com/license_renewal.html" />
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
