meta tags updated

--- a/business_setup.html
+++ b/business_setup.html
@@ -11,12 +11,11 @@
     />
     <!-- Site Metas -->
     <link rel="icon" href="images/logo_icononly.png" type="image/gif" />
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
 
     <!-- SEO Tags -->
-    <title>IDC | Business Setup | Legal Document Clearing Services in Dubai</title>
+    <title>
+      IDC | Business Setup | Legal Document Clearing Services in Dubai
+    </title>
     <meta
       name="description"
       content="IDC provides fast, reliable legal document clearing, attestation, translation, PRO and visa services in Dubai. Trust our experts for hassle-free UAE compliance."
